README: fill in missing Solution H implementation details
The previous Solution H section only described the attach mechanism but
omitted two key design points that differentiate it from a plain premain agent:

- agentmain + Can-Retransform-Classes: true allows the agent to patch
  Loader even when it was already loaded before loadAgent() was called
  (the hot-attach / retransform path)
- BridgeClassLoader sidecar topology (same as Solution 2) — now shown
  explicitly with a diagram

Also tightened the self-attach flag description.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>